Fix problems & adapt to new page